--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,6 @@
   "name": "SAML Message Decoder",
   "description": "Collects and displays SAML messages",
   "version": "2.0.0",
-
   "browser_action": {
     "default_popup": "index.html"
   },
@@ -19,7 +18,8 @@
     "<all_urls>",
     "webRequest",
     "contextMenus",
-    "storage"
+    "storage",
+    "downloads"
   ],
 
   "background": {
