--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,9 +3,14 @@
 
   "name": "SAML Message Decoder",
   "description": "Collects and displays SAML messages",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "browser_action": {
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon" : {
+      "16": "static/icon_16.png",
+      "48": "static/icon_48.png",
+      "128": "static/icon_128.png"
+    }
   },
 
   "icons": {
